test/compilable/test20151a.d
module imports.test20151a;
import imports.test20151a.b.c.c;
