test/fail_compilation/imports/test314a.d
module imports.test314a;

static import imports.test314imp;
